# claude-time-tracker

./: Cargo.toml
docs/: DESIGN.md
src/: cli.rs  config.rs  db.rs  git.rs  main.rs  models.rs  tracker.rs
src/report/: csv.rs  json.rs  markdown.rs  mod.rs  tsv.rs
